welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:3: error: not found: type int
var nbBiscuit:int = 0;
              ^RunHalf:4: error: not found: type int
var caseOrange:int = 0;
               ^