welcome.lessons.welcome.variables.RunHalf.scala.code
override def run() {
var nbBiscuit:int = 0;
var caseOrange:int = 0;
while ( 2 * nbBiscuit != caseOrange + 1) {
	avance();
	if (estSurBiscuit()) {
		(nbBiscuit = nbBiscuit + 1);
	}
	if (estSurOrange()) {
		(caseOrange = caseOrange + 1) ;
	}
	 
}
}
